# ObservaKit

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TEST_PLAN.md  desktop.ini  docker-compose.lite.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  pages.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_biginteger_numeric_columns.py  003_add_alert_noise_suppression.py  81c7c80e0f60_add_project_and_apikey_models.py
alerts/: __init__.py  base.py  discord.py  email.py  pagerduty.py  slack.py  teams.py  webhook.py
backend/: Dockerfile  __init__.py  auth.py  main.py  models.py  requirements.txt  scheduler.py  security.py
backend/routers/: __init__.py  alert_noise.py  checks.py  contracts.py  distribution.py  finops.py  freshness.py  late_arriving.py  maintenance.py  profiling.py  schema_diff.py  suppressions.py  webhooks.py
checks/examples/: observakit_self_check.yml  orders.yml
checks/my_project/: README.md
checks/templates/great_expectations/: no_duplicates.yml  no_nulls_on_pk.yml
checks/templates/soda/: no_duplicates.yml  no_nulls_on_pk.yml  referential_integrity.yml  row_count_min.yml  value_range.yml
cli/: main.py
config/: kit.yml  loader.py
config/contracts/: example_orders.yml
config/warehouses/: bigquery.example.yml  postgres.example.yml  snowflake.example.yml
connectors/: __init__.py  airflow.py  base.py  bigquery.py  databricks.py  deltalake.py  duckdb.py  mysql.py  postgres.py  prefect.py  redshift.py  snowflake.py  trino.py
dbt_integration/: README.md  parse_artifacts.py  watcher.py
docs/: adding_checks.md  alerting_setup.md  architecture.md  data-contracts.md  faq.md  getting-started.md  improvements.md  production-guide.md  real-world-use-cases.md  requirements.md  suggestion_2.md  suggestions.md  troubleshooting.md
docs/case_studies/: silent_failures_legacy_etl.md
grafana/dashboards/: cost_observability.json  data_freshness.json  pipeline_health.json  quality_trends.json  volume_anomaly.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  secret.yaml
landing-page/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
landing-page/public/: 404.html
landing-page/src/: App.css  App.jsx  index.css
landing-page/src/dashboard/: Dashboard.css  Dashboard.jsx  demoData.js
otel/: collector-config.yml
prometheus/: prometheus.yml
scripts/: bump_version.sh  generate_mock_data.py
setup/: setup.md
terraform/aws/: README.md  main.tf  variables.tf
tests/: __init__.py  conftest.py  test_alerts.py  test_api_auth.py  test_connectors.py  test_contracts.py  test_dbt_parser.py  test_distribution_drift.py  test_finops.py  test_freshness.py  test_noise_suppression.py  test_schema_diff.py  test_stage3_production.py  test_suppressions.py  test_volume.py
