[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "observakit"
version = "0.1.6"
description = "Data Observability Starter Kit for small teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.4",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/willowvibe/ObservaKit"
"Bug Tracker" = "https://github.com/willowvibe/ObservaKit/issues"
"Website" = "https://www.willowvibe.com"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
]
bigquery = ["google-cloud-bigquery>=3.20"]
snowflake = ["snowflake-connector-python>=3.7"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "connectors", "alerts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
