[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "cli*", "alerts*", "connectors*", "config*", "dbt_integration*"]

[project]
name = "observakit"
version = "0.1.11"
description = "Data Observability Starter Kit for small teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.4",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
    "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/willowvibe/ObservaKit"
"Bug Tracker" = "https://github.com/willowvibe/ObservaKit/issues"
"Website" = "https://www.willowvibe.com"

[project.scripts]
observakit = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.9",
    "ruff>=0.3.0",
]
bigquery = ["google-cloud-bigquery>=3.20"]
snowflake = ["snowflake-connector-python>=3.7"]
mysql = ["pymysql>=1.1.0"]
redshift = ["redshift-connector>=2.1"]
soda-postgres = ["soda-core-postgres>=3.0"]
soda-bigquery = ["soda-core-bigquery>=3.0"]
soda-snowflake = ["soda-core-snowflake>=3.0"]
duckdb = ["duckdb>=0.10"]
databricks = ["databricks-sql-connector>=3.0"]
trino = ["trino>=0.328"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "connectors", "alerts"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short"
# Enable coverage with: pytest --cov=backend --cov=alerts --cov=connectors --cov-fail-under=70
